@@ -2,6 +2,8 @@ partman-base (123) UNRELEASED; urgency=low
 
   [ Jérémy Bobbio ]
   * Improve display of virtio virtual disks.
+  * Save and restore the current working directory in partman_(un)lock_unit().
+    (Closes: #488687)
 
  -- Jérémy Bobbio <lunar@debian.org>  Fri, 11 Jul 2008 08:03:52 +0000
 
